--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
 nav ul li a.nav_home {
 	background: linear-gradient(#100e17 50%, #251F2D 120%);
 }
+
+.picture {
+	width: 20px;
+	height: 20px;
+	background-color: #000;
+}
