--- a/css/system.css
+++ b/css/system.css
@@ -10,7 +10,7 @@ nav ul li a.nav_system {
     color: #000;
 }
 
-section {
+.section {
 	padding: 25px;
 	border: 2px solid #000;
 	margin-bottom: 20px;
