--- a/css/system.css
+++ b/css/system.css
@@ -32,7 +32,7 @@ nav ul li a.nav_system {
         margin: 5px;
         padding: 10px;
     }
-    section {
+    .section {
         padding: 15px;
     }
 }
