--- a/css/main.css
+++ b/css/main.css
@@ -219,3 +219,10 @@ html, body {
     margin-left: -10px;
 }
 /* End tooltip styles */
+
+footer {
+    margin-left: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
