--- a/css/system.css
+++ b/css/system.css
@@ -18,11 +18,19 @@ nav ul li a.nav_system {
     font-size: 1.265rem;
 }
 
+aside .window {
+    background: linear-gradient(-45deg, #F0B68E, #F8DECD);
+}
+
 /* Styles for each subwindow */
 .section {
 	padding: 25px;
 	border: 2px solid #000;
 	margin-bottom: 20px;
+}
+
+aside .window .section ul li {
+    letter-spacing: -1px;
 }
 
 /* Start adaptive styles for "The gamer" system */
