--- a/style.css
+++ b/style.css
@@ -21,9 +21,8 @@ div.text-wrap {
 pre.text {
 	padding: 50px 50px;
 	margin: 0;
-	font-weight: 400;
-	font-family: Merriweather,serif;
-	font-size: 20px;
+	font-size: calc(1em * 0.875);
+	line-height: 1.6;
 	white-space: pre-wrap;
-	line-height: 1.8;
+	font-family: sans-serif;
 }
