--- a/style.css
+++ b/style.css
@@ -1,27 +1,9 @@
-body {
+body, div {
 	background-color: #f2f2f2;
 	padding: 0;
 	margin: 0;
 }
 
-
-div.content {
-	text-align: center;
-} 
-
-div.text-wrap {
-	width: 800px;
-	min-height: 100vh;
-	max-height: auto;
-	background-color: #fff;
-	display: inline-block;
-	text-align: left;
-}
-
-pre.text {
-	padding: 50px 50px;
-	margin: 0;
-	line-height: 1.6;
-	white-space: pre-wrap;
-	font-family: sans-serif;
+body img {
+	width: 100%;
 }
